--- a/Geo/Host/appsettings.Development.json
+++ b/Geo/Host/appsettings.Development.json
@@ -6,8 +6,9 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "User ID=postgres;Password=postgres;Host=haproxy;Port=5453;Database=postgres;Pooling=true;",
-    "ReadConnection": "User ID=postgres;Password=postgres;Host=haproxy;Port=5452;Database=postgres;Pooling=true;",
+    "DefaultConnection": "User ID=postgres;Password=postgres;Host=postgres;Port=5432;Database=postgres;Pooling=true;MaxPoolSize=90;",
+    "Slave1Connection": "User ID=postgres;Password=postgres;Host=postgres-slave1;Port=5433;Database=postgres;Pooling=true;MaxPoolSize=90;",
+    "Slave2Connection": "User ID=postgres;Password=postgres;Host=postgres-slave2;Port=5434;Database=postgres;Pooling=true;MaxPoolSize=90;",
     "Redis":"redis:6379"
   }
 }
