Enable SSL support and update bounding box SRID for consistency.
Configured SSL in `WebSpa` by generating self-signed certificates and modifying the `nginx` configuration to serve over HTTPS. Updated Docker and Angular setup to enable SSL in development. Adjusted bounding box queries in `FieldRepository` and `ClusterRepository` to include SRID for compatibility. Increased stress test user count to improve testing coverage.

--- a/WebSpa/angular.json
+++ b/WebSpa/angular.json
@@ -83,7 +83,7 @@
                "configurations": {
                   "production": {
                      "browserTarget": "Otus:build:production",
-                    "ssl" : false
+                    "ssl" : true
                   },
                   "development": {
                      "browserTarget": "Otus:build:development",
