--- a/WebSpa/nginx.conf
+++ b/WebSpa/nginx.conf
@@ -6,8 +6,11 @@ events {
 
 http {
     server {
-        listen 80;
+        listen 443 ssl;
         server_name  localhost;
+
+        ssl_certificate /etc/nginx/certs/localhost.crt;
+        ssl_certificate_key /etc/nginx/certs/localhost.key;
 
         root   /usr/share/nginx/html;
         index  index.html index.htm;
