--- a/deployment/docker-compose.override.yml
+++ b/deployment/docker-compose.override.yml
@@ -14,9 +14,8 @@ services:
       "RabbitMQ__Password": "6GccewECzxGJgTh4QYr82D8JUgCxsC5E"
       "RabbitMQ__VirtualHost": "/"
       "Security__EncryptionKey": "iNyEkoVuMRs1YTdOeKzq0GkpB7sCZy9/CqSVvYr9N9rpYc7RrGJS8LjOfVRhewsf"
-      "ConnectionStrings__DefaultConnection": "User ID=postgres;Password=postgres;Host=postgres;Port=5432;Database=postgres;Pooling=true;"
-      "ConnectionStrings__Slave1Connection": "User ID=postgres;Password=postgres;Host=postgres-slave1;Port=5432;Database=postgres;Pooling=true;"
-      "ConnectionStrings__Slave2Connection": "User ID=postgres;Password=postgres;Host=postgres-slave2;Port=5432;Database=postgres;Pooling=true;"
+      "ConnectionStrings__DefaultConnection": "User ID=postgres;Password=postgres;Host=haproxy;Port=5453;Database=postgres;Pooling=true;"
+      "ConnectionStrings__ReadConnection": "User ID=postgres;Password=postgres;Host=haproxy;Port=5452;Database=postgres;Pooling=true;"
     ports:
       - "5001:443"
       - "8001:80"
