Increase stress test user count and configure HAProxy default server connection limits for PostgreSQL backends.

--- a/deployment/haproxy/haproxy.cfg
+++ b/deployment/haproxy/haproxy.cfg
@@ -15,6 +15,7 @@ defaults
 backend postgres_write
     mode tcp
     balance first
+    default-server maxconn 90
     option pgsql-check user postgres
     server postgres postgres:5432 check port 5432 inter 2s fall 3 rise 2
 
@@ -25,6 +26,7 @@ backend postgres_write
 backend postgres_read
     mode tcp
     balance roundrobin
+    default-server maxconn 90
     option pgsql-check user postgres
     server postgres-slave1 postgres-slave1:5432 check port 5432 inter 2s fall 3 rise 2
     server postgres-slave2 postgres-slave2:5432 check port 5432 inter 2s fall 3 rise 2
